examples/tests/invalid/inflight_in_class.w
class C {
  init() {}
  inflight field: num; // No inflight fields in classes (only in resources)
  inflight method() {} // No inflight fields in methods (only in resources)
}